--- a/jakartajpa/pom.xml
+++ b/jakartajpa/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.15.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
     
      <build>
